--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "multer-s3-transform",
-  "version": "2.10.3",
+  "name": "multer-s3-transform-2",
+  "version": "1.0.0",
   "description": "Streaming multer storage engine for AWS S3",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "mocha test/basic.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tehkaiyu/multer-s3.git"
+    "url": "git+https://github.com/nociza/multer-s3-transform-2.git"
   },
   "keywords": [
     "multer",
@@ -16,12 +17,15 @@
     "amazon",
     "aws"
   ],
-  "author": "badunk",
+  "authors": [
+    "badunk",
+    "nociza"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/badunk/multer-s3/issues"
   },
-  "homepage": "https://github.com/tehkaiyu/multer-s3#readme",
+  "homepage": "https://github.com/nociza/multer-s3-transform-2#readme",
   "dependencies": {
     "file-type": "^3.3.0",
     "is-svg": "^5.0.0",
